@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-09T08:28:20Z",
-  "count" : 23,
-  "count_minmax" : [ 23, 23 ],
-  "count_decinc" : [ -0, +23 ],
+  "timestamp" : "2022-08-09T16:32:14Z",
+  "count" : 74,
+  "count_minmax" : [ 23, 74 ],
+  "count_decinc" : [ -0, +74 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
