@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-09T08:28:20Z",
+  "timestamp" : "2022-08-09T16:32:14Z",
   "count_outdated" : 449,
   "uniques_outdated" : 40,
-  "count" : 550,
+  "count" : 601,
   "uniques" : 45,
   "views" : [
     {
@@ -35,8 +35,8 @@
     },
     {
       "timestamp": "2022-08-09T00:00:00Z",
-      "count": 23,
-      "count_minmax": [ 23, 23 ],
+      "count": 74,
+      "count_minmax": [ 23, 74 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
